# tpDcc-libs-math

./: .travis.yml  MANIFEST.in  README.md  README.rst  setup.cfg
tests/: test_general.py
tpDcc/libs/math/: __init__.py  __logging__.ini  __version__.py  _version.py
tpDcc/libs/math/core/: bbox.py  bezier.py  consts.py  dijkstra.py  kdtree.py  matrix.py  octree.py  scalar.py  vec2.py  vec3.py
